Changed cd directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
     - JOBS=1
 
 before_install:
-  - cd ./frontend/website/
+  - cd $HOME/frontend/website/
   - npm config set spin false
   - npm install -g npm@^2
   - sudo chown root /opt/google/chrome/chrome-sandbox
@@ -27,11 +27,11 @@ before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:7357 &
 
 install:
-  - cd ./frontend/website/
+  - cd $HOME/frontend/website/
   - npm install -g bower
   - npm install
   - bower install
 
 script:
-  - cd ./frontend/website/
+  - cd $HOME/frontend/website/
   - npm test
