Test to see what Travis-CI directory structure looks like.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,9 @@ install:
   - bower install
 
 script:
+  - echo $HOME
+  - ls $HOME
+  - ls $HOME/frontend
+  - ls $HOME/frontend/website/
   - cd $HOME/frontend/website/
   - npm test
