--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
 
 cache:
   directories:
-    - $HOME/frontend/website/node_modules
     - $HOME/.npm
 
 env:
@@ -19,7 +18,6 @@ env:
     - JOBS=1
 
 before_install:
-  - cd $HOME/frontend/website/
   - npm config set spin false
   - npm install -g npm@^2
   - sudo chown root /opt/google/chrome/chrome-sandbox
@@ -27,11 +25,7 @@ before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:7357 &
 
 install:
-  - echo $HOME
-  - ls $HOME
-  - ls $HOME/frontend
-  - ls $HOME/frontend/website/
-  - cd $HOME/frontend/website/
+  - pwd
   - npm install -g bower
   - npm install
   - bower install
