--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ addons:
 
 cache:
   directories:
+    - /home/travis/build/ArmandMaree/codehaven/frontend/website/frontend/website/node_modules
     - $HOME/.npm
 
 env:
   global:
     - JOBS=1
+    - WEBSITE_DIR=/home/travis/build/ArmandMaree/codehaven/frontend/website/
 
 before_install:
   - npm config set spin false
@@ -25,11 +27,11 @@ before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:7357 &
 
 install:
-  - pwd
+  - cd $WEBSITE_DIR
   - npm install -g bower
   - npm install
   - bower install
 
 script:
-  - cd $HOME/frontend/website/
+  - cd $WEBSITE_DIR
   - npm test
