--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "cron-validator": "^1.2.1",
+    "cronstrue": "^1.117.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
