--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/dist/index.js",
   "scripts": {
     "clean": "rimraf dist/*",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint . --ext .ts --fix",
     "tsc": "tsc",
     "install-all": "npm install && cd client && npm install",
     "build": "npm-run-all clean lint tsc && cd client && npm run build",
@@ -19,17 +19,30 @@
   "author": "Armand Maree <aamaree@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "rsuite": "^4.10.2"
+    "express-pino-logger": "^6.0.0",
+    "mysql2": "^2.3.0",
+    "pino": "^6.13.3",
+    "pino-pretty": "^7.0.1",
+    "rsuite": "^4.10.2",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "dotenv": "^10.0.0",
+    "@types/express-pino-logger": "^4.0.2",
+    "@types/pino": "^6.3.11",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-plugin-import": "^2.24.2",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tsc": "^2.0.3",
-    "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
 }
