Added migration scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"include": [
 		"./server/src/**/*"
-	],
+, "migration", "sequelizerc"	],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
