--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "sequelize-cli": "^6.2.0",
     "tsc": "^2.0.3",
     "typescript": "^4.4.2"
   }
