Added command to migrate

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:start": "npm-run-all build start",
     "litebuild:start": "npm-run-all litebuild start",
     "dev": "nodemon --watch server/src -e ts,ejs,js --exec npm run litebuild:start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "sequelize-cli db:migrate"
   },
   "author": "Armand Maree <aamaree@gmail.com>",
   "license": "MIT",
