Added suupport for dotenv in sequelize migrations

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,8 @@
 const path = require("path");
+require('dotenv').config();
 
 module.exports = {
-  config: path.resolve("migration", "./config/database.json"),
+  config: path.resolve("migration", "./config/config.js"),
   "models-path": path.resolve("migration", "models"),
   "seeders-path": path.resolve("migration", "seeders"),
   "migrations-path": path.resolve("migration", "migrations"),
