--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   "author": "Armand Maree <aamaree@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
     "mysql2": "^2.3.0",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1",
+    "redis": "^3.1.2",
     "rsuite": "^4.10.2",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "^6.3.11",
