--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Armand Maree <aamaree@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -28,17 +29,20 @@
     "mysql2": "^2.3.0",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1",
+    "query-string": "^7.0.1",
     "redis": "^3.1.2",
     "rsuite": "^4.10.2",
     "sequelize": "^6.6.5",
-    "socket.io": "^4.2.0"
+    "ws": "^8.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "^6.3.11",
     "@types/uuid": "^8.3.1",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
