--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "codehaven",
-  "version": "0.1.0",
+  "name": "codehaven-backend",
+  "version": "1.0.0",
   "description": "",
-  "main": "server/dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist/*",
     "lint": "eslint . --ext .ts --fix",
     "tsc": "tsc",
-    "install-all": "npm install && cd client && npm install",
-    "build": "npm-run-all clean lint tsc && cd client && npm run build",
-    "litebuild": "npm-run-all clean lint tsc",
+    "build": "npm-run-all clean lint tsc",
     "start": "node .",
     "build:start": "npm-run-all build start",
-    "litebuild:start": "npm-run-all litebuild start",
-    "dev": "nodemon --watch server/src -e ts,ejs,js --exec npm run litebuild:start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch src -e ts,ejs,js --exec npm run build:start",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo"
   },
@@ -53,7 +49,6 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sequelize-cli": "^6.2.0",
-    "tsc": "^2.0.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.5.5"
   }
 }
